Fix alignment of edit and delete buttons on recipe listing

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,11 @@
 .recipe-list {
+  display: inline-block;
   width: 75%;
   margin: 0 auto; }
+  .recipe-list__item {
+    display: flex; }
+    .recipe-list__item__name {
+      width: 90%; }
 
 .form {
   width: 75%;
